tests/sparql/errors/error-api-1.rq
# Test query to trigger rowsource errors
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>
PREFIX fn: <http://www.w3.org/2005/xpath-functions#>

SELECT ?s ?p ?o ?error_result
WHERE {
  ?s ?p ?o .
  # This expression will trigger an error during evaluation
  # Using an invalid function call that should fail
  BIND(fn:substring(?o, -1, 5) AS ?error_result)
} 